FIX: Centre-align avatar of welcome wizard

--- a/src/app/home/states/new-user-wizard/new-user-wizard.scss
+++ b/src/app/home/states/new-user-wizard/new-user-wizard.scss
@@ -1,3 +1,10 @@
 .new-user-wizard {
 
 }
+
+.user-icon {
+    margin: 0 auto;
+    width: 60px; 
+    height: 60px; 
+    font-size: 2em;
+}
